# automagician

./: .gitignore  .pylintrc  CLAUDE.md  DEVELOPMENT.md  benchmark.py  benchmark2.py  benchmark_all.py  benchmark_gone_job.py  benchmark_regex.py  benchmark_wav_jobs.py  benchmark_wav_jobs_large.py  build.sh  oldUnitTests.py  old_automagician.py  old_commented_automagician.py  patch.diff  patch_db.py  pyproject.toml  test_db.py  test_db2.sqlite  test_db_all.sqlite  test_old_automagician.py
.github/workflows/: pylint.yml
docs/: conf.py  index.rst  make.bat
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/api/: classes.rst  constants.rst  database.rst  finish_job.rst  main.rst  process_job.rst  register.rst  update_job.rst
docs/usage/: quickstart.rst
src/automagician/: classes.py  constants.py  create_job.py  database.py  finish_job.py  machine.py  main.py  process_job.py  process_job.py.orig  register.py  small_functions.py  update_job.py
test/: conftest.py  integ_test.py  legacy_code.py  test_constants.py  test_create_job.py  test_database.py  test_database_bulk.py  test_finish_job.py  test_incar_missing_tags.py  test_log_error.py  test_machine.py  test_main.py  test_new_coverage.py  test_process_job.py  test_register.py  test_secure_lockfile.py  test_security.py  test_security_exploit.py  test_security_fix_machine.py  test_small_functions.py  test_submit_job.py  test_update_job.py  test_update_job_incar.py
(+41 files in other folders)
