[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "automagician"
version = "0.1.0"
description = "A package to make it easier to submit jobs to servers"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.10"

dependencies = [
]

[project.optional-dependencies]
    dev = [
        "ruff", "mypy", "pytest>=9.0.3", "isort", "pytest-cov", "pylint"
    ]
    remote = [
        "fabric"
    ]
    docs = [
        "sphinx>=7", "furo"
    ]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]

[project.scripts]
automagician = "automagician:main.main"
